product total value
